--- a/index.html
+++ b/index.html
@@ -14,103 +14,107 @@
 	</head>
 	<body>
 		<div class="container">
-			<!--Hero Section-->
-			<div class="hero-section">
-				<div class="hero-title">
-					<div class="label">
-						<span class="oferta">Oferta Limitada</span>
-					</div>
-					<h1>
-						<span class="green-color"> Pare de perder clientes!</span> tenha uma
-						site profissional<span class="green-color"> no mundo digital</span>
-					</h1>
-					<div class="hero-subtitle">
-						<strong>87% dos consumidores</strong> pesquisam online antes de
-						comprar. Enquanto você lê isso,
-						<span class="green-color"
-							>sua concorrência está consquistando seus clientes</span
-						>
-					</div>
-					<div class="hero-button">
-						<button
-							class="green-full"
-							href="https://kelvesmoura.com/web"
-							target="blank"
-						>
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								viewBox="0 0 448 512"
-								class="whatsapp-icon"
+			<section class="first-view">
+				<!--Hero Section-->
+				<div class="hero-section">
+					<div class="hero-title">
+						<div class="label">
+							<span class="oferta">Oferta Limitada</span>
+						</div>
+						<h1>
+							<span class="green-color"> Pare de perder clientes!</span> tenha
+							uma site profissional<span class="green-color">
+								no mundo digital</span
 							>
-								<path
-									d="M380.9 97.1c-41.9-42-97.7-65.1-157-65.1-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480 117.7 449.1c32.4 17.7 68.9 27 106.1 27l.1 0c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3 18.6-68.1-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1s56.2 81.2 56.1 130.5c0 101.8-84.9 184.6-186.6 184.6zM325.1 300.5c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8s-14.3 18-17.6 21.8c-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7s-12.5-30.1-17.1-41.2c-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2s-9.7 1.4-14.8 6.9c-5.1 5.6-19.4 19-19.4 46.3s19.9 53.7 22.6 57.4c2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4s4.6-24.1 3.2-26.4c-1.3-2.5-5-3.9-10.5-6.6z"
-								/>
-							</svg>
-							<p>Whatsapp</p>
-						</button>
-						<button
-							class="black-full"
-							href="https://kelvesmoura.com/web"
-							target="blank"
-						>
+						</h1>
+						<div class="hero-subtitle">
+							<strong>87% dos consumidores</strong> pesquisam online antes de
+							comprar. Enquanto você lê isso,
+							<span class="green-color"
+								>sua concorrência está consquistando seus clientes</span
+							>
+						</div>
+						<div class="hero-button">
+							<button
+								class="green-full"
+								href="https://kelvesmoura.com/web"
+								target="blank"
+							>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									viewBox="0 0 448 512"
+									class="whatsapp-icon"
+								>
+									<path
+										d="M380.9 97.1c-41.9-42-97.7-65.1-157-65.1-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480 117.7 449.1c32.4 17.7 68.9 27 106.1 27l.1 0c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3 18.6-68.1-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1s56.2 81.2 56.1 130.5c0 101.8-84.9 184.6-186.6 184.6zM325.1 300.5c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8s-14.3 18-17.6 21.8c-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7s-12.5-30.1-17.1-41.2c-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2s-9.7 1.4-14.8 6.9c-5.1 5.6-19.4 19-19.4 46.3s19.9 53.7 22.6 57.4c2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4s4.6-24.1 3.2-26.4c-1.3-2.5-5-3.9-10.5-6.6z"
+									/>
+								</svg>
+								<p>Whatsapp</p>
+							</button>
+							<button
+								class="black-full"
+								href="https://kelvesmoura.com/web"
+								target="blank"
+							>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									viewBox="0 0 512 512"
+									class="calling-icon"
+								>
+									<path
+										d="M160.2 25C152.3 6.1 131.7-3.9 112.1 1.4l-5.5 1.5c-64.6 17.6-119.8 80.2-103.7 156.4 37.1 175 174.8 312.7 349.8 349.8 76.3 16.2 138.8-39.1 156.4-103.7l1.5-5.5c5.4-19.7-4.7-40.3-23.5-48.1l-97.3-40.5c-16.5-6.9-35.6-2.1-47 11.8l-38.6 47.2C233.9 335.4 177.3 277 144.8 205.3L189 169.3c13.9-11.3 18.6-30.4 11.8-47L160.2 25z"
+									/>
+								</svg>
+								<p>Ligar agora</p>
+							</button>
+						</div>
+					</div>
+					<div class="hero-image">
+						<div class="prazo-5dias">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								viewBox="0 0 512 512"
-								class="calling-icon"
+								class="rocket"
 							>
 								<path
-									d="M160.2 25C152.3 6.1 131.7-3.9 112.1 1.4l-5.5 1.5c-64.6 17.6-119.8 80.2-103.7 156.4 37.1 175 174.8 312.7 349.8 349.8 76.3 16.2 138.8-39.1 156.4-103.7l1.5-5.5c5.4-19.7-4.7-40.3-23.5-48.1l-97.3-40.5c-16.5-6.9-35.6-2.1-47 11.8l-38.6 47.2C233.9 335.4 177.3 277 144.8 205.3L189 169.3c13.9-11.3 18.6-30.4 11.8-47L160.2 25z"
+									d="M128 320L24.5 320c-24.9 0-40.2-27.1-27.4-48.5L50 183.3C58.7 168.8 74.3 160 91.2 160l95 0c76.1-128.9 189.6-135.4 265.5-124.3 12.8 1.9 22.8 11.9 24.6 24.6 11.1 75.9 4.6 189.4-124.3 265.5l0 95c0 16.9-8.8 32.5-23.3 41.2l-88.2 52.9c-21.3 12.8-48.5-2.6-48.5-27.4L192 384c0-35.3-28.7-64-64-64l-.1 0zM400 160a48 48 0 1 0 -96 0 48 48 0 1 0 96 0z"
 								/>
 							</svg>
-							<p>Ligar agora</p>
-						</button>
+							Site pronto em até 5 dias
+						</div>
+						<div class="image-hero">
+							<img src="src/assets/images/image.png" alt="Cliente Feliz" />
+						</div>
 					</div>
 				</div>
-				<div class="hero-image">
-					<div class="prazo-5dias">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 512 512"
-							class="rocket"
-						>
-							<path
-								d="M128 320L24.5 320c-24.9 0-40.2-27.1-27.4-48.5L50 183.3C58.7 168.8 74.3 160 91.2 160l95 0c76.1-128.9 189.6-135.4 265.5-124.3 12.8 1.9 22.8 11.9 24.6 24.6 11.1 75.9 4.6 189.4-124.3 265.5l0 95c0 16.9-8.8 32.5-23.3 41.2l-88.2 52.9c-21.3 12.8-48.5-2.6-48.5-27.4L192 384c0-35.3-28.7-64-64-64l-.1 0zM400 160a48 48 0 1 0 -96 0 48 48 0 1 0 96 0z"
-							/>
-						</svg>
-						Site pronto em até 5 dias
-					</div>
-					<div class="image-hero">
-						<img src="src/assets/images/image.png" alt="Cliente Feliz" />
-					</div>
-				</div>
-			</div>
-			<!--CTA1-->
-			<div class="CTA1">
-				<div class="container-cta">
-					<div class="text-cta1">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 512 512"
-							class="clock-icon"
-						>
-							<path
-								d="M464 256a208 208 0 1 1 -416 0 208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0 256 256 0 1 0 -512 0zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
-							/>
-						</svg>
-						<p style="text-transform: uppercase">
-							Oferta por tempo limitado -
-							<span style="text-transform: none">
-								Garanta o seu Site e saia na frente do seu Concorrentes!</span
+				<!--CTA1-->
+				<div class="CTA1">
+					<div class="container-cta">
+						<div class="text-cta1">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 512 512"
+								class="clock-icon"
 							>
-						</p>
-					</div>
-					<div class="button-cta1">
-						<button href="https://kelvesmoura.com/web" target="blank">
-							Garantir meu desconto agora
-						</button>
+								<path
+									d="M464 256a208 208 0 1 1 -416 0 208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0 256 256 0 1 0 -512 0zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
+								/>
+							</svg>
+							<p style="text-transform: uppercase">
+								Oferta por tempo limitado -
+								<span style="text-transform: none">
+									Garanta o seu Site e saia na frente do seu Concorrentes!</span
+								>
+							</p>
+						</div>
+						<div class="button-cta1">
+							<button href="https://kelvesmoura.com/web" target="blank">
+								Garantir meu desconto agora
+							</button>
+						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 			<!--Prices-->
 			<div class="prices-section">
 				<div class="info-prices">
